--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -63,6 +63,7 @@ src/uml/uml_driver.c
 src/util/authhelper.c
 src/util/bridge.c
 src/util/conf.c
+src/util/hooks.c
 src/util/hostusb.c
 src/util/json.c
 src/util/logging.c
