--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -741,8 +741,11 @@
 
     <p>
       Provides direct attachment of the virtual machine's NIC to the given
-      physial interface of the host. This setup requires the Linux macvtap
-      driver to be available. One of the modes 'vepa'
+      physial interface of the host.
+      <span class="since">Since 0.7.7 (QEMU and KVM only)</span><br>
+      This setup requires the Linux macvtap
+      driver to be available. <span class="since">(Since Linux 2.6.34.)</span>
+      One of the modes 'vepa'
       ( <a href="http://www.ieee802.org/1/files/public/docs2009/new-evb-congdon-vepa-modular-0709-v01.pdf">
       'Virtual  Ethernet Port Aggregator'</a>), 'bridge' or 'private'
       can be chosen for the operation mode of the macvtap device, 'vepa'
