Distribute nwfilter xml files and add them to rpm
* examples/xml/nwfilter/Makefile.am: add all xml to the distribution
* libvirt.spec.in: reference them from the rpm spec file to have them
  available in the main libvirt package

--- a/examples/xml/nwfilter/Makefile.am
+++ b/examples/xml/nwfilter/Makefile.am
@@ -13,6 +13,8 @@ FILTERS = \
 	no-mac-spoofing.xml \
 	no-other-l2-traffic.xml
 
+EXTRA_DIST=$(FILTERS)
+
 confdir = $(sysconfdir)/libvirt
 
 NWFILTER_DIR = "$(DESTDIR)$(sysconfdir)/libvirt/nwfilter"
