--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -85,6 +85,7 @@ src/xen/xen_hypervisor.c
 src/xen/xen_inotify.c
 src/xen/xm_internal.c
 src/xen/xs_internal.c
+src/xenapi/xenapi_driver.c
 src/xenapi/xenapi_utils.c
 tools/console.c
 tools/virsh.c
