--- a/tools/virt-pki-validate.in
+++ b/tools/virt-pki-validate.in
@@ -203,7 +203,7 @@ then
 	    echo Server organization: $S_ORG
 	fi
 	S_HOST=`$CERTOOL -i --infile $LIBVIRT/servercert.pem | grep Subject: | sed 's+.*CN=\([a-zA-Z\. _-]*\)+\1+'`
-	if [ "$S_HOST" != "`hostname -s`" -a "$S_HOST" != "`hostname`" ]
+	if test "$S_HOST" != "`hostname -s`" && test "$S_HOST" != "`hostname`"
 	then
 	    echo The server certificate does not seem to match the host name
 	    echo hostname: '"'`hostname`'"'
