--- a/tools/virt-pki-validate.in
+++ b/tools/virt-pki-validate.in
@@ -297,7 +297,7 @@ Alternatively report bugs to your software distributor / vendor.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2006-2009 by Red Hat, Inc
+Copyright (C) 2006-2010 by Red Hat, Inc.
 
 =head1 LICENSE
 
