--- a/tools/virt-xml-validate.in
+++ b/tools/virt-xml-validate.in
@@ -134,7 +134,7 @@ Alternatively report bugs to your software distributor / vendor.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2009 by Red Hat, Inc
+Copyright (C) 2009-2010 by Red Hat, Inc.
 Copyright (C) 2009 by Daniel P. Berrange
 
 =head1 LICENSE
