This patch adds a couple of test cases for the XML parsing test suite covering various filterable protocols. For each test case an input XML and an output XML is provided checking the input XML after parsing and converting back into XML against the exepcted output XML.
Signed-off-by: Stefan Berger <stefanb@us.ibm.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,6 +72,8 @@ EXTRA_DIST =		\
 	nodedevschemadata \
 	vmx2xmldata \
 	xml2vmxdata \
+	nwfilterxml2xmlout \
+	nwfilterxml2xmlin \
 	$(patsubst %,qemuhelpdata/%,$(qemuhelpdata))
 
 noinst_PROGRAMS = virshtest conftest \
@@ -102,6 +104,8 @@ noinst_PROGRAMS += object-locking
 endif
 
 noinst_PROGRAMS += networkxml2xmltest
+
+noinst_PROGRAMS += nwfilterxml2xmltest
 
 noinst_PROGRAMS += storagevolxml2xmltest storagepoolxml2xmltest
 
@@ -162,6 +166,7 @@ endif
 
 if WITH_QEMU
 TESTS += qemuxml2argvtest qemuxml2xmltest qemuargv2xmltest qemuhelptest
+TESTS += nwfilterxml2xmltest
 endif
 
 if WITH_ESX
@@ -285,6 +290,11 @@ networkxml2xmltest_SOURCES = \
 	networkxml2xmltest.c \
 	testutils.c testutils.h
 networkxml2xmltest_LDADD = $(LDADDS)
+
+nwfilterxml2xmltest_SOURCES = \
+	nwfilterxml2xmltest.c \
+	testutils.c testutils.h
+nwfilterxml2xmltest_LDADD = $(LDADDS)
 
 storagevolxml2xmltest_SOURCES = \
 	storagevolxml2xmltest.c \
