nwfilter: Add filter schema for nwfilter XML, extend domain XML schema
This patch adds a relaxng nwfilter schema along with a test that
verifies all the test output XML against the schema. The input XMLs
contain a lot of intentional out-of-range values that make them fail the
schema verification, so I am not verifying against those.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -74,6 +74,7 @@ EXTRA_DIST =		\
 	xml2vmxdata \
 	nwfilterxml2xmlout \
 	nwfilterxml2xmlin \
+	nwfilterschematest \
 	$(patsubst %,qemuhelpdata/%,$(qemuhelpdata))
 
 noinst_PROGRAMS = virshtest conftest \
@@ -120,7 +121,8 @@ test_scripts = \
 	storagepoolschematest \
 	storagevolschematest \
 	domainschematest \
-	nodedevschematest
+	nodedevschematest \
+	nwfilterschematest
 
 if WITH_LIBVIRTD
 test_scripts +=				\
