Add documentation for synchronous hooks
* docs/sitemap.html.in: add in navigation under
  Documentation/Deployment/Hooks
* docs/hooks.html.in: new doc describing current support for 0.8.0

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -50,6 +50,10 @@
                 <a href="logging.html">Logging</a>
                 <span>The library and the daemon logging support</span>
               </li>
+              <li>
+                <a href="hooks.html">Hooks</a>
+                <span>Hooks for system specific management</span>
+              </li>
             </ul>
           </li>
           <li>
